<resources>
    <string name="app_name">LockBox</string>
    <string name="enter_your_password">Please type your password!</string>
    <string name="submit">Submit</string>
    <string name="welcome_to_lockbox">Welcome to LockBox</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_password">Enter Your password</string>
    <string name="confirm_password">Confirm Your password</string>
    <string name="password_not_matched">Password does not match</string>
    <string name="incorrect_password">Password is incorrect!</string>
    <string name="too_many_attemps">Too many attempts! Please wait.</string>
    <string name="password">Password</string>
</resources>