<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="credential"
            type="com.rohitksingh.lockbox.models.Credential"/>
        <variable
            name="signUpFragment"
            type="com.rohitksingh.lockbox.views.SignUpFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/design_default_color_primary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/FormEditText"
            android:text="@={credential.password}"
            />
        <EditText
            android:id="@+id/confirmpassword"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            style="@style/FormEditText"
            />
        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> signUpFragment.submit()}"
            android:backgroundTint="@color/white"
            android:paddingBottom="8sp"
            android:paddingLeft="16sp"
            android:paddingRight="16sp"
            android:paddingTop="8sp"
            android:text="@string/submit"
            android:textColor="@color/design_default_color_primary"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/confirmpassword"
            android:enabled="@{ confirmpassword.text.length() == 0 ? false : true }"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>